# template-repository

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: manual.yml  misspell.yml  python-package.yml  reviewdog.yml  test.yml
docs/: conf.py
docs/_templates/: badges.html  github.html  moreinfo.html
tests/test_example/: test_some_function.py
