[tool.poetry]
name = "xls-db"
description = "Load an excel file into the database"
version = "0.1.0"
license = "MIT"

authors = ["Zov"]
readme = "README.md"
repository = "https://github.com/zovcrru/xls-db"
keywords = []

classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.poetry.dependencies]
python = "^3.8.1"
detect-secrets = "^1.4.0"

[tool.poetry.group.test.dependencies]
mypy = "^1.8"

wemake-python-styleguide = "^0.18"
flake8-pytest-style = "^1.7"
doc8 = "^1.1"
nitpick = "^0.35"

safety = "^3.0.1"

pytest = "^8.0"
pytest-cov = "^4.1"
pytest-randomly = "^3.15"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
sphinx = "^7.1"
sphinx-autodoc-typehints = "^2.0"
m2r2 = "^0.3"
tomli = "^2.0"


[build-system]
requires = ["poetry-core>=1.2.0"]
build-backend = "poetry.core.masonry.api"


[tool.nitpick]
style = "https://raw.githubusercontent.com/wemake-services/wemake-python-styleguide/master/styles/nitpick-style-wemake.toml"
